--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+  "start": "concurrently \"json-server --watch data.json --port 3001\" \"react-scripts start\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -44,6 +44,8 @@
     ]
   },
   "devDependencies": {
-    "jest": "^27.5.1"
+    "concurrently": "^8.2.0",
+    "jest": "^27.5.1",
+    "json-server": "^0.17.3"
   }
 }
